featuree: frontend finalizado

--- a/src/components/PageHeader/TeacherItem/styles.css
+++ b/src/components/PageHeader/TeacherItem/styles.css
@@ -50,7 +50,7 @@
     justify-content: space-between;
 }
 
-.teacher-item>footer button {
+.teacher-item>footer a {
     width: 20rem;
     height: 5.6rem;
     background: var(--color-secundary);
@@ -64,9 +64,10 @@
     justify-content: space-evenly;
     text-decoration: none;
     transition: 0.2s;
+    text-decoration: none;
 }
 
-.teacher-item>footer button:hover {
+.teacher-item>footer a:hover {
     background: var(--color-secundary-dark);
 }
 
@@ -92,12 +93,12 @@
         margin-left: 1.6rem;
     }
 
-    .teacher-item>footer button {
+    .teacher-item>footer a {
         font-size: 1.6rem;
         justify-content: center;
     }
 
-    .teacher-item footer button img {
+    .teacher-item footer a img {
         margin-right: 1.6rem;
     }
 }
